# my_crypto_predictor

./: .dockerignore  .gitignore  Makefile  README.md  main.py  pyproject.toml
deployments/create_enviroment/: create_kind_kubernete.sh  create_rising_wave_service.sh
deployments/dev/: create_kafka_service_ui.sh
deployments/dev/kind/: create_rising_wave_service.sh
deployments/dev/manifests/: kafka.yaml
deployments/scripts/: deploy.sh
deployments/services/: candles.yaml  get-trades.yaml  get_trades.yaml  historical-services.yaml  technical-indicators.yaml  technical_indicators.yaml
deployments/services/training-pipeline/: kustomization.yaml  training-pipeline-cj.yaml  training-pipeline-cm.yaml  training-pipeline-j.yaml
dockers/: .dockerignore  candles.DockerFile  get-trades.DockerFile  technical-indicators.DockerFile  technical_indicators_1_stage.DockerFile  trades.DockerFile  training-pipeline.DockerFile
mlruns/0/: meta.yaml
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml
services/candles/src/: config.py  main.py  settings.env
services/get-trades/src/: config.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  model.py  settings.env
services/get_trades/src/: api_kraken.py  config.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  model.py  settings.env
services/predictor/: README.md  pyproject.toml  query.sql  settings.env
services/predictor/src/: .envrc  config.py  inference.py  model_registry.py  models.py  names.py  train.py  transform_clean_data.py
services/predictor/src/None/0/: meta.yaml
services/technical-indicators/: pyproject.toml
services/technical-indicators/src/: candles.py  config.py  create_table.sql  main.py  settings.env  technical_indicators.py
services/technical_indicators/: pyproject.toml
services/trades/src/: main.py  (+5 more)
(+60 files in other folders)
