[project]
name = "my-bitcoin-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "quixstreams>=3.13.1",
    "requests>=2.32.3",
    "ta-lib>=0.6.3",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = ["services/candles", "services/technical_indicators"]
