[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Miguel Vilches Fierro", email = "josemiguelvilchesfierro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lazypredict>=0.2.16",
    "mlflow>=2.22.0",
    "optuna>=4.3.0",
    "scikit-learn>=1.6.1",
    "ydata-profiling>=4.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/predictor"]
